syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "MeasurementValidityProto";


message MeasurementValidityMsg {
  enum EnumType {
    VLD = 0;
    VLDATED = 1;
    ONG = 2;
    QST = 3;
    CALIB = 4;
    INV = 5;
    OFLW = 6;
    UFLW = 7;
    N_A = 8;
  }
  EnumType enum_value = 1;
}
