syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "NumericMetricStateProto";

import "sdc/biceps/abstractmetricstate.proto";
import "sdc/biceps/numericmetricvalue.proto";
import "sdc/biceps/range.proto";
import "google/protobuf/duration.proto";

message NumericMetricStateMsg {
  AbstractMetricStateMsg abstract_metric_state = 1;
  NumericMetricValueMsg metric_value = 2;
  repeated RangeMsg physiological_range = 3;
  google.protobuf.Duration a_active_averaging_period = 4;
}
