syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "NumericMetricValueProto";

import "sdc/biceps/abstractmetricvalue.proto";
import "google/protobuf/wrappers.proto";

message NumericMetricValueMsg {
  AbstractMetricValueMsg abstract_metric_value = 1;
  google.protobuf.StringValue a_value = 2;
}
